--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.0.0-alpha.6",
-    "react-native": "0.44.0",
-    "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "react": "16.0.0",
+    "react-native": "0.50.3",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
-    "babel-jest": "20.0.3",
-    "babel-preset-react-native": "1.9.2",
-    "jest": "20.0.3",
-    "react-test-renderer": "16.0.0-alpha.6"
+    "babel-jest": "21.2.0",
+    "babel-preset-react-native": "4.0.0",
+    "enzyme": "^3.1.1",
+    "enzyme-adapter-react-16": "^1.0.4",
+    "jest": "21.2.1",
+    "jest-enzyme": "^4.0.1",
+    "react-test-renderer": "16.0.0",
+    "redux-mock-store": "^1.3.0"
   },
   "jest": {
     "preset": "react-native"
